<resources>
    <string name="app_name">Food App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="area">Area</string>
    <string name="category">Category</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="home_sub_heading">What would you like to eat</string>
    <string name="home_sub_heading_2">over popular items</string>
    <string name="home_sub_heading_3">Categories</string>
    <string name="instructions">Instructions</string>
    <string name="hint_search">Search Meal...</string>

</resources>