<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.HomeFragment">
    
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/linear_layout"
                android:padding="@dimen/generic_padding"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/sub_heading"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home"
                    android:layout_weight="2"
                    android:textSize="@dimen/text_header_size"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/baseline_search_24"/>
            </LinearLayout>

            <TextView
                android:id="@+id/sub_heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/generic_padding"
                android:textSize="@dimen/generic_sub_heading_text_size"
                android:text="@string/home_sub_heading"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/linear_layout"
                app:layout_constraintStart_toStartOf="@+id/linear_layout"
                app:layout_constraintEnd_toEndOf="@+id/linear_layout"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view"
                android:layout_width="match_parent"
                android:layout_height="@dimen/card_view_height"
                app:layout_constraintStart_toStartOf="@+id/linear_layout"
                app:layout_constraintEnd_toEndOf="@+id/linear_layout"
                app:layout_constraintTop_toBottomOf="@+id/sub_heading"
                android:layout_marginStart="@dimen/card_view_start_margin"
                android:layout_marginEnd="@dimen/card_view_start_margin"
                android:layout_marginTop="@dimen/card_view_top_margin"
                app:cardCornerRadius="@dimen/card_view_top_margin"
                app:cardBackgroundColor="@color/purple_200"
                android:layout_marginBottom="@dimen/card_view_top_margin">

                <ImageView
                    android:id="@+id/card_view_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"/>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/sub_heading_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/generic_padding"
                android:textSize="@dimen/generic_sub_heading_text_size"
                android:text="@string/home_sub_heading_2"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/card_view"
                app:layout_constraintStart_toStartOf="@+id/linear_layout"
                app:layout_constraintEnd_toEndOf="@+id/linear_layout"/>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/recycler_view_height"
                android:id="@+id/recyclerViewMealsPopular"
                android:layout_marginStart="@dimen/card_view_start_margin"
                android:layout_marginEnd="@dimen/recycler_view_margin_end"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sub_heading_2"/>

            <TextView
                android:id="@+id/sub_heading_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/generic_padding"
                android:textSize="@dimen/generic_sub_heading_text_size"
                android:text="@string/home_sub_heading_3"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/recyclerViewMealsPopular"
                app:layout_constraintStart_toStartOf="@+id/linear_layout"
                app:layout_constraintEnd_toEndOf="@+id/linear_layout"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view_2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/card_view_height"
                app:layout_constraintStart_toStartOf="@+id/linear_layout"
                app:layout_constraintEnd_toEndOf="@+id/linear_layout"
                app:layout_constraintTop_toBottomOf="@+id/sub_heading_3"
                app:cardCornerRadius="@dimen/card_view_top_margin"
                android:layout_marginStart="@dimen/card_view_start_margin"
                android:layout_marginEnd="@dimen/card_view_start_margin"
                android:layout_marginTop="@dimen/card_view_top_margin"
                android:layout_marginBottom="@dimen/card_view_top_margin">

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scrollbars="none"/>
            </androidx.cardview.widget.CardView>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>