<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MealActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_layout">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbarLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="@color/purple_200"
            android:background="@color/purple_200"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            app:title="Meal Name"
            app:expandedTitleTextColor="@color/white"
            app:collapsedTitleTextColor="@color/white">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/img_meal_detail"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"/>

            <Toolbar
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                app:layout_collapseMode="pin"/>
        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/favoriteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_favorite_border_24"
        app:backgroundTint="@color/purple_200"
        android:tint="@color/white"
        app:layout_anchor="@id/appbar"
        app:layout_anchorGravity="end|bottom"
        android:layout_marginEnd="@dimen/generic_padding"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/linear_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginStart="@dimen/card_view_top_margin"
                android:layout_marginEnd="@dimen/card_view_top_margin"
                android:layout_marginTop="@dimen/card_view_top_margin"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <TextView
                    android:id="@+id/category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/category"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:drawableLeft="@drawable/baseline_category_24"
                    android:layout_weight="1"/>


                <TextView
                    android:id="@+id/location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/area"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:drawableLeft="@drawable/baseline_location_on_24"
                    android:layout_weight="1"/>

            </LinearLayout>
            
            <TextView
                android:id="@+id/instruction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linear_layout"
                android:layout_marginTop="@dimen/card_view_top_margin"
                android:paddingStart="@dimen/card_view_top_margin"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/instructions"
                android:textSize="@dimen/generic_sub_heading_text_size"
                />

            <TextView
                android:id="@+id/details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/instruction"
                android:layout_marginTop="@dimen/margin_5_dp"
                android:paddingStart="@dimen/card_view_top_margin"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <ImageView
        android:layout_width="@dimen/youtube_40dp"
        android:layout_height="@dimen/youtube_40dp"
        android:id="@+id/youTube"
        android:layout_gravity="center|bottom"
        android:src="@drawable/baseline_ondemand_video_24"
        android:layout_marginBottom="@dimen/card_view_top_margin"/>

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        app:layout_anchor="@id/appbar"
        app:layout_anchorGravity="bottom"
        android:visibility="invisible"/>


</androidx.coordinatorlayout.widget.CoordinatorLayout>